--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Daniele's Homepage"
 title_separator          : "-"
 name                     : &name "Daniele Didino"
 description              : &description "Data Analyst & Data Scientist | Ex Cognitive Scientist"
-url                      : "https://danieledidino.github.io/didinodaniele.github.io/" # https://academicpages.github.io
+url                      : "https://danieledidino.github.io" # https://academicpages.github.io
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "DanieleDidino/DanieleDidino.github.io" # "academicpages/academicpages.github.io"
 
@@ -22,32 +22,33 @@ repository               : "DanieleDidino/DanieleDidino.github.io" # "academicpa
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  name             : ""Daniele Didino"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "I am a Data Scientist, holding a Ph.D. in Cognitive Sciences. Proficient in Python, R, and SQL, with 10+ years of experience in data analysis and machine learning."
+  location         : "Berlin (Germany)"
+  employer         : "D-AI-logy"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "daniele.didino@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
-  googlescholar    : "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
+  googlescholar    : # "https://scholar.google.com/citations?user=PS_CX0AAAAAJ"
   impactstory      : # URL
-  orcid            : "http://orcid.org/yourorcidurl"
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
+  orcid            : # "http://orcid.org/yourorcidurl"
+  pubmed           : # "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
   researchgate     : # URL
+  OSF              : https://osf.io/agd7c/
 
   # Repositories and software development
   bitbucket        : # Username - Update with your username on the site
   codepen          : # Username
   dribbble         : # Username
-  github           : "academicpages"
+  github           : "DanieleDidino"
   kaggle           : # Username  
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "bsky.app" # Replace this with you Bluesky username
+  bluesky          : # "bsky.app" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
