--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ repository               : "DanieleDidino/DanieleDidino.github.io" # "academicpa
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : ""Daniele Didino"
+  name             : "Daniele Didino"
   pronouns         : # example: "she/her"  
   bio              : "I am a Data Scientist, holding a Ph.D. in Cognitive Sciences. Proficient in Python, R, and SQL, with 10+ years of experience in data analysis and machine learning."
   location         : "Berlin (Germany)"
@@ -57,7 +57,7 @@ author:
   keybase          : # Username
   instagram        : # Username
   lastfm           : # Username
-  linkedin         : # Username
+  linkedin         : "daniele-didino"
   mastodon         : # URL
   medium           : # URL
   pinterest        : # Username
@@ -65,7 +65,7 @@ author:
   steam            : # Username
   telegram         : # URL
   tumblr           : # Username
-  twitter          : # Username for X / Twitter
+  twitter          : # Username
   vine             : # Username
   weibo            : # Username
   wikipedia        : # Username
