--- a/_config.yml
+++ b/_config.yml
@@ -268,6 +268,14 @@ defaults:
       layout: talk
       author_profile: true
       share: true
+  # _project1
+  - scope:
+      path: ""
+      type: project1
+    values:
+      layout: single
+      author_profile: true
+      share: true
 
 
 # Sass/SCSS
