--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -21,5 +21,5 @@ main:
   - title: "Guide"
     url: /markdown/
   
-  - title: "Project1"
-    url: /project1/
+  - title: "LLM"
+    url: /LLM_projects/
