--- a/_config.yml
+++ b/_config.yml
@@ -211,7 +211,7 @@ collections:
   talks:
     output: true
     permalink: /:collection/:path/
-  project1:
+  LLM_projects:
     output: true
     permalink: /:collection/:path/
 
@@ -271,10 +271,10 @@ defaults:
       layout: talk
       author_profile: true
       share: true
-  # _project1
+  # _LLM_projects
   - scope:
       path: ""
-      type: project1
+      type: LLM_projects
     values:
       layout: single
       author_profile: true
