edit airbnb price page

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile.png"
   name             : "Daniele Didino"
   pronouns         : # example: "she/her"  
-  bio              : "Data Analyst & Data Scientist | Ex Cognitive Scientist"
+  bio              : "Data Analyst & Data Scientist |\nEx Cognitive Scientist"
   location         : "Berlin (Germany)"
   employer         : "D-AI-logy"
   uri              : # URL
