--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,24 +15,15 @@ main:
   - title: "LLM"
     url: /LLM_projects/
 
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
 
   - title: "CV"
     url: /files/DanieleDidino_Resume.pdf # url: /cv/
   
   # - title: "Publications"
-  #   url: https://scholar.google.com/citations?user=M3qWuYcAAAAJ&hl=en&oi=ao # url: /publications/
-  
-  # - title: "Talks"
-  #   url: /talks/    
-  
-  # - title: "Teaching"
-  #   url: /teaching/    
+  #   url: https://scholar.google.com/... # url: /publications/
   
   # - title: "Blog Posts"
   #   url: /year-archive/
-  
-  - title: "Guide"
-    url: /markdown/
   
