--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,9 @@ main:
   - title: "LLM"
     url: /LLM_projects/
 
+  - title: "Statistics"
+    url: /Statistics/
+
   # - title: "Portfolio"
   #   url: /portfolio/
 
