--- a/_config.yml
+++ b/_config.yml
@@ -223,6 +223,9 @@ collections:
   statistics:
     output: true
     permalink: /:collection/:path/
+  cv:
+    output: true
+    permalink: /:collection/:path/
 
 
 # Defaults
@@ -307,6 +310,14 @@ defaults:
   - scope:
       path: ""
       type: statistics
+    values:
+      layout: single
+      author_profile: true
+      share: true
+  # _cv
+  - scope:
+      path: ""
+      type: cv
     values:
       layout: single
       author_profile: true
