delete unused files

--- a/_config.yml
+++ b/_config.yml
@@ -167,7 +167,7 @@ exclude:
   - gulpfile.js
   - log
   - node_modules
-  - package.json
+  #- package.json
   - tmp
   - vendor
 keep_files:
@@ -202,16 +202,7 @@ collections:
   data_proj:
     output: true
     permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
   data_viz:
-    output: true
-    permalink: /:collection/:path/
-  eda:
-    output: true
-    permalink: /:collection/:path/
-  data_modeling:
     output: true
     permalink: /:collection/:path/
   LLM_projects:
@@ -256,35 +247,10 @@ defaults:
     values:
       layout: single
       author_profile: true
-  # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
   # _data_viz
   - scope:
       path: ""
       type: data_viz
-    values:
-      layout: single
-      author_profile: true
-      share: true
-  # _eda
-  - scope:
-      path: ""
-      type: eda
-    values:
-      layout: single
-      author_profile: true
-      share: true
-  # _data_modeling
-  - scope:
-      path: ""
-      type: data_modeling
     values:
       layout: single
       author_profile: true
