--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 
 # Basic Site Settings
 locale                   : "en-US"
-title                    : "Daniele's Homepage"
+title                    : "Daniele's Data Lab"
 title_separator          : "-"
 name                     : &name "Daniele Didino"
 description              : &description "Personal website"
