edit Data Science Projects page

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@ main:
   - title: "LLM"
     url: /LLM_projects/
 
-  - title: "Statistics"
+  - title: "Statistics & Research"
     url: /statistics/
 
   - title: "CV"
