new image About page

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ author:
   avatar           : "profile_2.jpg"
   name             : "Daniele Didino"
   pronouns         : "he/his"  
-  bio              : "Data Analyst & Data Scientist | Ex Cognitive Scientist"
+  bio              : "Data Scientist | Data Analyst | Cognitive Science & AI"
   location         : "Berlin (Germany)"
   employer         : "Dailogy"
   uri              : # URL
