--- a/_config.yml
+++ b/_config.yml
@@ -26,7 +26,7 @@ author:
   pronouns         : "he/his"  
   bio              : "Data Scientist | Data Analyst | Cognitive Science & AI"
   location         : "Berlin (Germany)"
-  employer         : "Dailogy"
+  employer         : # "Dailogy"
   uri              : # URL
   email            : "daniele.didino@gmail.com" 
 
